--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+
+    <protobuf.version>3.9.2</protobuf.version>
   </properties>
+
 
 
   <profiles>
@@ -49,7 +52,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -193,6 +195,13 @@
       <version>2.3.0</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.9.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -235,6 +244,30 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <useBodyEncodingForURI>true</useBodyEncodingForURI>
+            <port>8080</port>
+            <path>/</path>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>7.6.15.v20140411</version>
+          <configuration>
+            <useTestClasspath>true</useTestClasspath>
+            <webAppConfig>
+              <contextPath>/</contextPath>
+            </webAppConfig>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
 
